# JASON

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PRODUCT.md  README.md  WORKLOG.md  canais.txt  pyproject.toml
.streamlit/: config.toml
apps/web/: package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/_components/: bootstrap-ribbon.tsx  nav.tsx
apps/web/src/app/avaliar/: page.tsx
apps/web/src/app/comparar/: page.tsx
apps/web/src/app/outliers/: page.tsx
apps/web/src/app/palavras/: page.tsx
apps/web/src/app/sugerir/: page.tsx
apps/web/src/app/temas/: page.tsx
apps/web/src/app/thumbs/: page.tsx
apps/web/src/lib/: api.ts
data/: warehouse.duckdb
experiments/: ablate_calendar.py  ablate_calendar_results.json  ablate_calendar_results.md  pairwise_per_bucket.py
migrations/: 001_init.sql  002_handle_cache.sql  003_horror_releases.sql  004_video_features.sql  005_embeddings.sql  006_topics.sql  007_suggestions.sql  008_yt_analytics.sql  009_suggestion_chosen.sql  010_paper_backed_features.sql  011_paper_backed_features_v2.sql  012_title_theme_alignment.sql  013_thumb_attributes.sql
scripts/: audit_channels.py  bootstrap-laptop.sh  report_features.py  weekly_snapshot.sh
src/jason/: __init__.py  cli.py  config.py
src/jason/api/: main.py
src/jason/dashboard/: __init__.py  app.py  feature_context.py  humanize.py
src/jason/features/: __init__.py  embeddings.py  head_to_head.py  outliers.py  power_keywords.py  readability.py  sentiment.py  theme_alignment.py  theme_suggester.py  thumb_aesthetics.py  thumb_vlm.py  title_features.py  topics.py
src/jason/generation/: __init__.py  rag.py  titles.py
src/jason/ingestion/: __init__.py  discover.py  handle_resolver.py  stats_snapshot.py  thumbnails.py  tmdb.py  transcripts.py  youtube_analytics.py  youtube_data.py
src/jason/models/: __init__.py  buckets.py  features.py  predict.py  train.py  tune.py
src/jason/models/artifacts/ablation_baseline/: meta.json  model.lgb  model_seed_10042.lgb  model_seed_20042.lgb  model_seed_30042.lgb  model_seed_40042.lgb  thumb_kmeans.pkl  title_kmeans.pkl
src/jason/models/artifacts/ablation_no_calendar/: meta.json  model.lgb  model_seed_10042.lgb  model_seed_20042.lgb  model_seed_30042.lgb  model_seed_40042.lgb  thumb_kmeans.pkl  title_kmeans.pkl
src/jason/models/artifacts/ablation_no_calendar_no_duration/: meta.json  model.lgb  model_seed_10042.lgb  model_seed_20042.lgb  model_seed_30042.lgb  model_seed_40042.lgb  thumb_kmeans.pkl  title_kmeans.pkl
src/jason/models/artifacts/multiplier_v1/: best_params.json  meta.json  model.lgb  model_seed_10042.lgb  model_seed_20042.lgb  model_seed_30042.lgb  model_seed_40042.lgb  thumb_kmeans.pkl  title_kmeans.pkl
src/jason/thumbs/: __init__.py  colors.py  frame_extractor.py  frame_scorer.py  text_overlay_advisor.py
tests/: test_embeddings.py  test_generation.py  test_handle_resolver.py  test_models.py  test_outliers.py  test_smoke.py  test_stats_snapshot.py  test_thumbnails.py  test_thumbs.py  test_title_features.py  test_tmdb.py  test_topics.py  test_transcripts.py  test_youtube_analytics.py  test_youtube_data.py
